# Preprocessing-Skills

./: .coverage  .gitignore  onemli_notlar.ipynb  pyproject.toml  setting_up_dependencies.ipynb
claims_ml/.ipynb_checkpoints/: pyproject-checkpoint.toml
claims_ml/src/data_loader/: __init__.py  data_loader.py  error_messages.py  exceptions.py
claims_ml/src/data_preprocessing/: __init__.py  config.yaml  data_preprocessor.py  load_config.py
notes/: 1_setting_up_dependencies.ipynb  2_data_reader_and_tests.ipynb  3_data_preprocessing.ipynb  project_steps.ipynb
tests/: conftest.py
tests/data/: test_data_loader.py
tests/data_loader/: test_data_loader.py
tests/data_preprocessing/: conftest.py  test_data_preprocessor.py
tests/test_datasets/: test.csv  test.parquet  test_config.yaml
