[project]
name = "claims-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pytest-cov>=6.2.1",
    "scikit-learn>=1.7.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

# pytest configuration
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
